# code-executor

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
dockerfiles/cpp:23/: Dockerfile  build.sh  run_user_code.sh
dockerfiles/java:15/: Dockerfile  build.sh  run_user_code.sh
dockerfiles/python:3.12/: Dockerfile  build.sh  run_user_code.sh
dockerfiles/ruby:3.2/: Dockerfile  build.sh  run_user_code.sh
environments/dev/: Dockerfile
environments/dev/scripts/: build-language-images.sh  start.sh
examples/: test_client.rs  test_cpp_client.rs  test_java_client.rs  test_parallel_client.rs  test_ruby_client.rs
src/: lib.rs  main.rs
src/container/: manager.rs  mod.rs
src/proto/: executor.proto
src/runner/: mod.rs
src/security/: mod.rs  sandbox.rs
