[package]
name = "code-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
bollard = "0.15"  # Docker API client
bollard-stubs = "1.43.0-rc.2"  # Docker API stubs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
nix = { version = "0.30.1", features = ["feature", "process", "resource", "signal", "user"] }
tempfile = "3.8"
os_pipe = "1.1"

[build-dependencies]
tonic-build = "0.10"

[[example]]
name = "test_client"
path = "examples/test_client.rs"

[[example]]
name = "test_ruby_client"
path = "examples/test_ruby_client.rs"

[[example]]
name = "test_parallel_client"
path = "examples/test_parallel_client.rs"

